crates/backyard-lexer/tests/snapshots/keywords__function_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 181
expression: tokens
snapshot_kind: text
---
- token_type: Function
  value: function
  line: 1
  column: 0
  offset: 0
