crates/backyard-lexer/tests/snapshots/keywords__get_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 444
expression: tokens
snapshot_kind: text
---
- token_type: Get
  value: get
  line: 1
  column: 0
  offset: 0
