crates/backyard-lexer/tests/snapshots/keywords__global_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Global
  value:
    - 103
    - 108
    - 111
    - 98
    - 97
    - 108
  line: 1
  column: 0
  offset: 0
