crates/backyard-lexer/tests/snapshots/keywords__goto_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 191
expression: tokens
snapshot_kind: text
---
- token_type: Goto
  value: goto
  line: 1
  column: 0
  offset: 0
