crates/backyard-lexer/tests/snapshots/keywords__if_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 196
expression: tokens
snapshot_kind: text
---
- token_type: If
  value: if
  line: 1
  column: 0
  offset: 0
