crates/backyard-lexer/tests/snapshots/keywords__implements_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Implements
  value:
    - 105
    - 109
    - 112
    - 108
    - 101
    - 109
    - 101
    - 110
    - 116
    - 115
  line: 1
  column: 0
  offset: 0
