crates/backyard-lexer/tests/snapshots/keywords__include_once_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: IncludeOnce
  value:
    - 105
    - 110
    - 99
    - 108
    - 117
    - 100
    - 101
    - 95
    - 111
    - 110
    - 99
    - 101
  line: 1
  column: 0
  offset: 0
