crates/backyard-lexer/tests/snapshots/keywords__instanceof_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: InstanceOf
  value:
    - 105
    - 110
    - 115
    - 116
    - 97
    - 110
    - 99
    - 101
    - 111
    - 102
  line: 1
  column: 0
  offset: 0
