crates/backyard-lexer/tests/snapshots/keywords__insteadof_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 221
expression: tokens
snapshot_kind: text
---
- token_type: InsteadOf
  value: insteadof
  line: 1
  column: 0
  offset: 0
