crates/backyard-lexer/tests/snapshots/keywords__interface_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 226
expression: tokens
snapshot_kind: text
---
- token_type: Interface
  value: interface
  line: 1
  column: 0
  offset: 0
